welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:4: error: not found: value is
  } else if (is Morning) {
             ^answerCell:5: error: not found: value is
    return is Mom
           ^